ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  annotations:
    kubernetes.io/ingress.class: "alb"  # for AWS ALB Ingress Controller
spec:
  rules:
    - host: thiernope.xyz
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: webapp-service
                port:
                  number: 8080
